Swapped computer demon logo for default diamond. Put picture of me on about page.

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -54,6 +54,11 @@
 			border: solid _size(border-width) _palette(border);
 			border-radius: 100%;
 
+      &.cd-logo {
+					background:transparent url('../../images/computerdemon.logo.svg') 49.5% 50% no-repeat;
+          background-size:57%;
+      }
+
 			.icon {
 				&:before {
 					font-size: 2rem;
